fixed h2 alignment w no margins

--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,11 @@ h2 {
 #main-bio {
     float: left;
     width: 70%;
-    margin: 25px;
 }
 
 #contact-info {
     float: left;
     width: 30%;
-    margin: 25px;
 }
 
 a {
